hledger/test/errors/parseable-dates.j
#!/usr/bin/env -S hledger check -f

2022/1/32
  (a:c)  1
